--- a/static/scss/page_layout.scss
+++ b/static/scss/page_layout.scss
@@ -37,6 +37,9 @@
 
         a {
           width: 100%;
+          & + a {
+            border-top: none;
+          }
         }
       }
     }
